<resources>
    <string name="app_name">TheArchive</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="tvUser">Username:</string>
    <string name="tvPass">Password:</string>
    <string name="tfUser">Username</string>
    <string name="tfName">Name</string>
    <string name="tfSurname">Surnames</string>
    <string name="tfPass">Password</string>
    <string name="tfVerifiPass">Repeat password</string>
    <string name="btnLogin">Sign in</string>
    <string name="btnRegister">Sign up</string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="btnSettings">Settings</string>
    <string name="btnSeeBooks">See Books</string>
    <string name="btnSave">Save</string>
    <string name="btnDelete">Delete account</string>
    <string name="htUserTL">your username</string>
    <string name="htPassTL">your password</string>
    <string name="tvRegister">Click here to <font color='#00a8ff'>sign up</font></string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="progressBar_dialog">Loading...</string>
    <string name="add_book_description">Add book</string>
    <string name="book_recommends">You recommends this book?</string>
    <string name="book_recommends_positive">Yes</string>
    <string name="book_recommends_negative">No</string>
    <string name="book_reading_progress">Which is your progress?</string>
    <string name="book_already_added">This book is already on your shelving!</string>
    <string name="update_user_error">The information introduced is wrong!</string>
    <string name="update_user_correct">User information updated successfully!</string>
    <string name="pass_equals">Passwords do not match!</string>
    <string name="data_missing">There can not be empty fields!</string>
    <string name="delete_error">The account could not be deleted!</string>
    <string name="delete_correct">The account has been deleted correctly!</string>
    <string name="delete_book_correct">The book has been deleted correctly!</string>
    <string name="delete_book_error">The book could not be deleted!</string>
    <string name="option_search">Search</string>
    <string name="option_feed">Feed</string>
    <string name="share_text">If you want to organize your book shelf virtually on your smartphone, I recommend this App: TheArchive</string>
    <string name="share_thanks">To collaborate on the project, the best way to help us is by sharing it!</string>
    <string name="content_download">Could not download content</string>
    <string-array name="type">
        <item>Read</item>
        <item>Reading</item>
        <item>Unread</item>
    </string-array>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
</resources>
