<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1E2E8"
    tools:context=".PerfilUsuarioActivity">

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="409dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:text="@string/btnSettings"
        android:textColor="#215C22"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeeBooks"
        tools:textStyle="bold" />

    <Button
        android:id="@+id/btnSeeBooks"
        android:layout_width="409dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:text="@string/btnSeeBooks"
        android:textColor="#215C22"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditProfile"
        tools:textStyle="bold" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="409dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:text="@string/btnEditProfile"
        android:textColor="#215C22"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDatos"
        tools:textStyle="bold" />

    <TextView
        android:id="@+id/tvDatos"
        android:layout_width="410dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:text="X libros - X amigos"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUser" />

    <ImageView
        android:id="@+id/ivLauncher2"
        android:layout_width="412dp"
        android:layout_height="192dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="410dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/tfUser"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLauncher2" />

</androidx.constraintlayout.widget.ConstraintLayout>